--- a/README
+++ b/README
@@ -1,1 +1,26 @@
-QT Lab environment
+# How to use (Windows 7, 10, and 11)
+
+Download qtlab Source code (zip), Python27.zip, and toWord.2018.06.17.zip from [here](https://github.com/cover-me/qtlab/releases/tag/v0.3.0)
+
+Download  qt_plot.2020.09.21.7z from [here](https://github.com/cover-me/qtplot/releases)
+
+Upzip and put these folders in the same folder
+
+Run qtlab_win11.bat to start qtlab, qt_plot.exe to start qtplot, there you go
+
+![qtlab_command_line](https://user-images.githubusercontent.com/22870592/235606148-5f30f130-b4f6-4802-8228-02f1a930a5f0.gif)
+
+![qtlab_qtplot](https://user-images.githubusercontent.com/22870592/235606186-f9a945ef-ecbe-4225-a2a3-9f1470c335ca.gif)
+
+![qtlab_gui](https://user-images.githubusercontent.com/22870592/235606212-5d37d212-45d6-4e17-a551-1975ef917481.gif)
+
+# Further reading
+
+Qtlab drivers: https://github.com/cover-me/repository/tree/master/qt/qtlab%20new%20drivers
+
+Qtlab scan scripts: https://github.com/cover-me/repository/tree/master/qt/qtlab%20scan%20scripts
+
+Qtplot: https://github.com/cover-me/qtplot
+
+
+
